 - Now honouring filter exclusion list in generating synthetics
 - Specific filters can now be disabled resulting in multiple combinations being excluded
 - "Generate N images" count takes "Apply N times" and disabled filter combinations into consideration
 - New settings layout including checkbox and text field and filter list alignment. Copy also revised.
 - Refactored all filters into sepparate files within folder group
 - Changed window title, about and main menu text
 - Increased initial window size/minimum size
 - Cutout filter for both image and annotations (initial version)
 - Cutout testing and improvements
 - Consistent "N annotations total" message
 - Project reorg around removing the "Annotate" moniker
 
 Week 4 (Partial?)

 - Annotation edit mode with cancel
 - Enter no longer needed to rename annotation
 - New numeric input for annotation's dimensions and position
 - [PLANNED] Repeat filter field needs enter to save
 - [PLANNED] Real-time numeric feedback while creating annotation
 - [PLANNED] Numeric feedback while moving annotation
 - [PLANNED] Auto-select newly created annotation
 - [PLANNED] On-screen annotation label handles
 - [PLANNED] Show/hide toggle annotation labels
 - [PLANNED] Disable save json button when just exported
 - [PLANNED] Back-up JSON auto-saved in workspace
 - [PLANNED] Rever to annotations.json (reload)

KNOWN ISSUES
------------

 - Pressing del, up/down performs the expected action but also sounds an alert
 - Image navigator does not automatically scroll while selecting items using keyboard
 - UI freezes briefly when too many images are about to be generated
 - Incompatible with previous version workspace (remove .visioannotate folder to work-around this issue)
 - [TBC] Sometimes empty PNGs are generated and reported not to be written to disk (when random extent bounds are zero)
 - [CONFIRMED] Sometimes the image inspector is active showing a file missing note instead of "no active/selected image"